@startuml
title 知识库与文档入库模块 ER 图

skinparam shadowing false
skinparam linetype ortho
hide circle

entity "workspaces" as workspaces {
  * workspace_id : varchar(64) <<PK>>
  --
  name : varchar(100)
  status : varchar(16)
}

entity "knowledge_bases" as knowledge_bases {
  * id : bigserial <<PK>>
  --
  kb_id : varchar(64) <<UK>>
  workspace_id : varchar(64) <<FK>>
  name : varchar(100)
  description : varchar(500)
  status : varchar(16)
  --
  UK(workspace_id, kb_id)
  CK(status IN ACTIVE, INACTIVE, DELETED)
}

entity "ingest_documents" as documents {
  * document_id : varchar(64) <<PK>>
  --
  workspace_id : varchar(64) <<FK>>
  kb_id : varchar(128)
  file_hash : varchar(64)
  filename : varchar(512)
  file_size : bigint
  status : varchar(32)
  processing_metadata : jsonb
  latest_version_number : int
  latest_status : varchar(32)
  latest_filename : varchar(512)
  latest_version_origin_type : varchar(32)
  --
  UK(workspace_id, document_id)
}

entity "ingest_document_versions" as versions {
  * id : bigserial <<PK>>
  --
  document_id : varchar(64) <<FK>>
  version_number : int
  version_origin_type : varchar(32)
  rollback_from_version_number : int
  file_hash : varchar(64)
  filename : varchar(512)
  file_size : bigint
  status : varchar(32)
  processing_metadata : jsonb
  created_by_user_id : varchar(64)
  --
  UK(document_id, version_number)
}

workspaces ||--o{ knowledge_bases : fk_knowledge_bases_workspace
workspaces ||--o{ documents : fk_ingest_documents_workspace
knowledge_bases ||..o{ documents : logical(workspace_id, kb_id)
documents ||--o{ versions : fk_ingest_document_versions_document
versions .. versions : rollback_from_version_number

note right of documents
  主表保存文档稳定身份和 latest projection。
  V5 后版本级文件事实和处理事实以版本表为准。
end note

@enduml
